--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -4,40 +4,56 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
     android:paddingVertical="11dp">
 
     <ImageView
         android:id="@+id/songCover"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginStart="11dp"
         android:background="@drawable/default_song_cover"
         android:contentDescription="@string/song_cover"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/songTitleTv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="11dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:textColor="@color/grey_800"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/songArtistTv"
-        app:layout_constraintStart_toEndOf="@id/songCover"
+        app:layout_constraintEnd_toStartOf="@+id/listeningHour"
+        app:layout_constraintStart_toEndOf="@+id/songCover"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        tool:text="Song Title" />
+        tool:text="Very long Song Title Very long Song Title Very long Song Title Very long" />
 
     <TextView
         android:id="@+id/songArtistTv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="11dp"
         android:textColor="@color/grey_700"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/songCover"
+        app:layout_constraintEnd_toStartOf="@+id/listeningHour"
+        app:layout_constraintStart_toEndOf="@+id/songCover"
         app:layout_constraintTop_toBottomOf="@+id/songTitleTv"
         tool:text="Song Artist" />
+
+    <TextView
+        android:id="@+id/listeningHour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tool:text="20h35" />
 </android.support.constraint.ConstraintLayout>
