Add date header

--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -21,7 +21,7 @@
         android:id="@+id/songTitleTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_normal"
         android:layout_marginStart="11dp"
         android:ellipsize="end"
         android:maxLines="2"
@@ -38,7 +38,7 @@
         android:id="@+id/songArtistTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_normal"
         android:layout_marginStart="11dp"
         android:textColor="@color/grey_700"
         android:textSize="16sp"
