Update header style

--- a/app/src/main/res/layout/date_item.xml
+++ b/app/src/main/res/layout/date_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="65dp"
     android:paddingHorizontal="@dimen/padding_normal">
 
     <TextView
@@ -11,10 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_normal"
+        android:layout_marginTop="17dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/blue_grey_700"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="25 december 2017" />
