--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -4,13 +4,15 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="11dp">
+    android:background="@color/white"
+    android:elevation="3dp"
+    android:paddingVertical="@dimen/margin_normal">
 
     <ImageView
         android:id="@+id/songCover"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="11dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/margin_normal"
         android:background="@drawable/default_song_cover"
         android:contentDescription="@string/song_cover"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,9 +24,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_normal"
-        android:layout_marginStart="11dp"
-        android:ellipsize="end"
-        android:maxLines="2"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textColor="@color/grey_800"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/songArtistTv"
@@ -39,7 +41,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_normal"
-        android:layout_marginStart="11dp"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textColor="@color/grey_700"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
