--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -4,8 +4,8 @@
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:elevation="3dp"
+    android:background="@drawable/ripple_white"
+    android:elevation="2dp"
     android:paddingVertical="@dimen/margin_normal">
 
     <ImageView
