--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/ripple_white"
-    android:elevation="2dp"
+    android:elevation="@dimen/song_elevation"
     android:paddingVertical="@dimen/margin_normal">
 
     <ImageView
