--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_normal">16dp</dimen>
     <dimen name="spacing_micro">4dp</dimen>
     <dimen name="margin_normal">16dp</dimen>
+    <dimen name="song_elevation">2dp</dimen>
 </resources>
